tests/samples/negative/pattern_matching/enum_payload_constructor_missing_arg.ax
module enum_payload_constructor_missing_arg;

enum Packet: u8 {
    int(i32) = 1,
}

fn main() -> i32 {
    let packet = Packet.int();
    return 0;
}
